--- a/Pagina web/cesta.html
+++ b/Pagina web/cesta.html
@@ -165,7 +165,7 @@
                     carrito = [];
                     localStorage.removeItem('carrito');
                     mostrarJuegosEnCesta();
-                    window.location.href = "index.html";
+                    window.location.href = "../index.html";
                 }
             });
         }
@@ -216,7 +216,7 @@
                             carrito = [];
                             localStorage.removeItem('carrito');
                             mostrarJuegosEnCesta();
-                            window.location.href = "index.html";
+                            window.location.href = "../index.html";
                         }
                     });
                 } else {
