--- a/Pagina web/cliente.html
+++ b/Pagina web/cliente.html
@@ -139,7 +139,7 @@
             }).then((result) => {
                 if (result.isConfirmed) {
                     // Redirigir a cliente
-                    window.location.href = "index.html";
+                    window.location.href = "../index.html";
                 }
             });
         }
