Update2 index.html

--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
     <section id="slider">
         <div class="gallery-container">
             <figure class="gallery-item">
-                <img src="Contenido/Index/BANNER2.png" alt="Imagen 1">
+                <img src="./Contenido/Index/BANNER2.png" alt="Imagen 1">
             </figure>
             <figure class="gallery-item">
-                <img src="Contenido/Index/banner1.png" alt="Imagen 2">
+                <img src="./Contenido/Index/banner1.png" alt="Imagen 2">
             </figure>
             <figure class="gallery-item">
-                <img src="Contenido/Index/banner3.png" alt="Imagen 3">
+                <img src="./Contenido/Index/banner3.png" alt="Imagen 3">
             </figure>
         </div>
         <nav class="gallery-navigation">
