--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
     <!--Las redirecciones a login tienen que cambiar porque aún no se ha establecido el JS correspondiente-->
     <header>
         <div class="logo-container">
-            <img src="../Contenido/Index/logo.png" id="logo">
+            <img src="./Contenido/Index/logo.png" id="logo">
             <h1 onclick="window.location.href='index.html'">The Gaming Room</h1>
         </div>
         <div class="header-buttons">
             <input type="text" placeholder="&#128269; Buscar">
-            <button class="icon-button" id="avatar"><img src="../Contenido/Index/avatar.png" alt="Avatar"></button>
+            <button class="icon-button" id="avatar"><img src="./Contenido/Index/avatar.png" alt="Avatar"></button>
             <button class="icon-button" id="cart" onclick="window.location.href='Pagina web/cesta.html'"><img
-                    src="../Contenido/Index/cesta.png" alt="Cesta"></button>
+                    src="./Contenido/Index/cesta.png" alt="Cesta"></button>
         </div>
     </header>
     <nav>
@@ -87,7 +87,7 @@
         <h2 style="padding-top: 40px;">NOVEDADES SWITCH</h2>
         <div class="wrapperSwitch">
             <div class="cardSwitch">
-                <div class="posterSwitch"><img src="/Contenido/Nintendo Switch/marioodyssey.jpg" alt="Location Unknown">
+                <div class="posterSwitch"><img src="./Contenido/Nintendo Switch/marioodyssey.jpg" alt="Location Unknown">
                 </div>
                 <div class="detailsSwitch">
                     <h1>Super Mario Odyssey</h1>
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <div class="cardSwitch">
-                <div class="posterSwitch"><img src="/Contenido/Nintendo Switch/splatoon_3.jpg" alt="Location Unknown">
+                <div class="posterSwitch"><img src="./Contenido/Nintendo Switch/splatoon_3.jpg" alt="Location Unknown">
                 </div>
                 <div class="detailsSwitch">
                     <h1>Splatoon 3</h1>
@@ -121,7 +121,7 @@
                 </div>
             </div>
             <div class="cardSwitch">
-                <div class="posterSwitch"><img src="/Contenido/Nintendo Switch/pokemonpurpura.png"
+                <div class="posterSwitch"><img src="./Contenido/Nintendo Switch/pokemonpurpura.png"
                         alt="Location Unknown">
                 </div>
                 <div class="detailsSwitch">
@@ -139,7 +139,7 @@
                 </div>
             </div>
             <div class="cardSwitch">
-                <div class="posterSwitch"><img src="/Contenido/Nintendo Switch/pokemonescarlata.png"
+                <div class="posterSwitch"><img src="./Contenido/Nintendo Switch/pokemonescarlata.png"
                         alt="Location Unknown">
                 </div>
                 <div class="detailsSwitch">
@@ -157,7 +157,7 @@
                 </div>
             </div>
             <div class="cardSwitch">
-                <div class="posterSwitch"><img src="/Contenido/Nintendo Switch/Metroid_Prime_Remasteres.png"
+                <div class="posterSwitch"><img src="./Contenido/Nintendo Switch/Metroid_Prime_Remasteres.png"
                         alt="Location Unknown">
                 </div>
                 <div class="detailsSwitch">
@@ -181,7 +181,7 @@
         <h2>RESERVAS</h2>
         <div class="wrapperXP">
             <div class="cardXP">
-                <div class="posterXP"><img src="/Contenido/Xbox/diabloiv.jpg" alt="Location Unknown">
+                <div class="posterXP"><img src="./Contenido/Xbox/diabloiv.jpg" alt="Location Unknown">
                 </div>
                 <div class="detailsXP">
                     <h1>Diablo IV</h1>
@@ -198,7 +198,7 @@
                 </div>
             </div>
             <div class="cardXP">
-                <div class="posterXP"><img src="/Contenido/Xbox/likeadragon.jpg" alt="Location Unknown">
+                <div class="posterXP"><img src="./Contenido/Xbox/likeadragon.jpg" alt="Location Unknown">
                 </div>
                 <div class="detailsXP">
                     <h1>Infinite Wealth</h1>
@@ -215,7 +215,7 @@
                 </div>
             </div>
             <div class="cardXP">
-                <div class="posterXP"><img src="/Contenido/Xbox/persona3remake.jpg" alt="Location Unknown">
+                <div class="posterXP"><img src="./Contenido/Xbox/persona3remake.jpg" alt="Location Unknown">
                 </div>
                 <div class="detailsXP">
                     <h1>Persona 3 Remake</h1>
@@ -232,7 +232,7 @@
                 </div>
             </div>
             <div class="cardXP">
-                <div class="posterXP"><img src="/Contenido/PlayStation/finalfantasyvii.png" alt="Location Unknown">
+                <div class="posterXP"><img src="./Contenido/PlayStation/finalfantasyvii.png" alt="Location Unknown">
                 </div>
                 <div class="detailsXP">
                     <h1>F.F. VII: Rebirth</h1>
@@ -249,7 +249,7 @@
                 </div>
             </div>
             <div class="cardXP">
-                <div class="posterXP"><img src="/Contenido/PlayStation/residentevil4.png" alt="Location Unknown">
+                <div class="posterXP"><img src="./Contenido/PlayStation/residentevil4.png" alt="Location Unknown">
                 </div>
                 <div class="detailsXP">
                     <h1>Resident Evil 4</h1>
@@ -280,7 +280,7 @@
                 </td>
                 <td>
                     <div class="image-container2">
-                        <img src="../Contenido/Merchandising/kirby.png">
+                        <img src="./Contenido/Merchandising/kirby.png">
                         <div class="overlay">
                             <button style="margin-right: 57%; margin-top: 20%;">Añadir al carrito</button>
                         </div>
@@ -292,7 +292,7 @@
                 </td>
                 <td>
                     <div class="image-container2">
-                        <img src="../Contenido/Merchandising/yoshi.png">
+                        <img src="./Contenido/Merchandising/yoshi.png">
                         <div class="overlay">
                             <button style="margin-right: 57%; margin-top: 20%;">Añadir al carrito</button>
                         </div>
@@ -304,7 +304,7 @@
                 </td>
                 <td>
                     <div class="image-container2" style="color: white;">
-                        <img src="../Contenido/Merchandising/vaporeon.png">
+                        <img src="./Contenido/Merchandising/vaporeon.png">
                         <div class="overlay">
                             <button style="margin-right: 57%; margin-top: 20%;">Añadir al carrito</button>
                         </div>
@@ -316,7 +316,7 @@
                 </td>
                 <td>
                     <div class="image-container2">
-                        <img src="../Contenido/Merchandising/hercules.png">
+                        <img src="./Contenido/Merchandising/hercules.png">
                         <div class="overlay">
                             <button style="margin-right: 57%; margin-top: 20%;">Añadir al carrito</button>
                         </div>
@@ -353,9 +353,9 @@
                         <p>"Lorem ipsum dolor sit amet, consec..."</p>
                     </td>
                     <td>
-                        <img src="../Contenido/Index/logotwitter.png" width="20%" style="padding: 5px;">
-                        <img src="../Contenido/Index/logoinstagram.png" width="18%" style="padding: 5px;">
-                        <img src="../Contenido/Index/logoyoutube.png" width="20%" style="padding: 5px;">
+                        <img src="./Contenido/Index/logotwitter.png" width="20%" style="padding: 5px;">
+                        <img src="./Contenido/Index/logoinstagram.png" width="18%" style="padding: 5px;">
+                        <img src="./Contenido/Index/logoyoutube.png" width="20%" style="padding: 5px;">
                     </td>
                     <td>
                         <p>"Lorem ipsum dolor sit amet, consec..."</p>
