Update4 index.html

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
             <table>
                 <tr>
                     <th>
-                        <p><b><a href="quienessomos.html">SOBRE NOSOTROS</a></b></p>
+                        <p><b><a href="Pagina web/quienessomos.html">SOBRE NOSOTROS</a></b></p>
                     </th>
                     <th>
                         <p><b>REDES SOCIALES</b></p>
