--- a/Pagina web/secciones.html
+++ b/Pagina web/secciones.html
@@ -274,7 +274,7 @@
             <h2>TOP VENTAS</h2>
             <div class="wrapperSwitch">
                 <div class="cardSwitch">
-                    <div class="posterSwitch"><img src="./Contenido/Nintendo Switch/legostarwars.png"
+                    <div class="posterSwitch"><img src="../Contenido/Nintendo Switch/legostarwars.png"
                             alt="Location Unknown">
                     </div>
                     <div class="detailsSwitch">
@@ -292,7 +292,7 @@
                     </div>
                 </div>
                 <div class="cardSwitch">
-                    <div class="posterSwitch"><img src="./Contenido/Nintendo Switch/kirby.png" alt="Location Unknown">
+                    <div class="posterSwitch"><img src="../Contenido/Nintendo Switch/kirby.png" alt="Location Unknown">
                     </div>
                     <div class="detailsSwitch">
                         <h1>Kirby Forgotten</h1>
